# llm-rag

./: .env  main.py  pyproject.toml  test.py
data/vector_db/1d5230b0-e9ab-4b62-9315-3949b41a1e56/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
